# cpp-decompression-poc

./: .gitignore  README.md  app.json  app.sqlite  app.sqlite-shm  app.sqlite-wal  global.d.ts  package-lock.json  package.json  solutions.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymous/thoughtsjournal/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
backend/: powersync.yaml
scripts/: delta.db  generate_delta.py
shared/: NativeSampleModule.cpp  NativeSampleModule.h
specs/: NativeSampleModule.ts
src/app/: _layout.tsx  benchmark.tsx  index.tsx
src/powersync/: AppSchema.ts  SupabaseConnector.ts  SystemProvider.tsx
